# Chat

./: .gitignore  CMakeLists.txt  Chat.cpp  Chat.h  CuiWrapper.cpp  CuiWrapper.h  Message.cpp  Message.h  MessageBox.cpp  MessageBox.h  README.md  User.cpp  User.h  UserChatRegister.cpp  UserChatRegister.h  UserRegister.cpp  UserRegister.h  UserRegistry.cpp  UserRegistry.h  main.cpp  millisecondTime.cpp  millisecondTime.h  txtHandleFunctions.cpp  txtHandleFunctions.h
config/: userRegistry.txt
test/: CMakeLists.txt  ChatFixture.cpp  MessageBoxFixture.cpp  MessageFixture.cpp  UserChatRegisterFixture.cpp  UserFixture.cpp  UserRegisterFixture.cpp  UserRegistryFixture.cpp
test/lib/googletest/: CMakeLists.txt
test/lib/googletest/cmake/: internal_utils.cmake
thirdpartlib/date/: CMakeLists.txt
